United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7020042 G1: Partially remove fix for 6994628
7020042 : G1: Partially remove fix for 6994628

Details
Type:
Bug
Submit Date:
2011-02-16
Status:
Closed
Updated Date:
2012-10-01
Project Name:
JDK
Resolved Date:
2011-04-23
Component:
hotspot
OS:
linux_redhat_4.0,generic
Sub-Component:
gc
CPU:
x86,generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
6u25
Fixed Versions:
hs20

Related Reports
Backport:
Backport:
Backport:
Duplicate:
Relates:
Relates:

Sub Tasks

Description
The issue that is causing the failures seen in 7009266 arise as a result of performing reference discovery during concurrent marking, followed by processing any discovered references at the end of concurrent marking. 

By partially removing the fix for 6994628 we can eliminate the disovery of reference objects during concurrent marking - the code that traces objects in concurrent marking will treat reference objects as regular objects and mark through them (marking the referent object and any object that is reachable from it).

By marking the referent objects means that the Logger objects in the KitchenSink bigapp will always be strongly reachable and marked.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/8f1042ff784d
                                     
2011-04-04
EVALUATION

http://hg.openjdk.java.net/hsx/hsx20/baseline/rev/1ec37096cecf
                                     
2011-02-19
SUGGESTED FIX

Remove code that sets the reference processor field in the CMOopClosure - or place it under an experimental flag that is false by default. This will disable reference discovery and processing during concurrent marking.
                                     
2011-02-18
EVALUATION

Remove the code that initializes the reference processor in the concurrent marking oop closure. This will cause the reference processor in the closure to be null and effectivelty cause reference objects to be treated as regular objects.
                                     
2011-02-16



Hardware and Software, Engineered to Work Together