7020042: G1: Partially remove fix for 6994628

Disable reference discovery and processing during concurrent marking by disabling fix for 6994628.

Reviewed-by: tonyp, ysr